--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.github.dozermapper</groupId>-->
+<!--			<artifactId>dozer-core</artifactId>-->
+<!--			<version>6.4.0</version>-->
+<!--		</dependency>-->
 		<dependency>
-			<groupId>com.github.dozermapper</groupId>
-			<artifactId>dozer-core</artifactId>
-			<version>7.0.0</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
 		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.security</groupId>-->
