--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,13 @@
 			<artifactId>spring-hateoas</artifactId>
 			<version>2.3.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
