--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+cors:
+  originPatterns: http://localhost:8080,https://erudio.com.br,http://localhost:3000
 #Database config
 spring:
   datasource:
